--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio repudiandae nihil laborum sed aspernatur eos quisquam animi molestiae, debitis error maiores id. Porro eligendi perferendis ex quisquam unde repudiandae excepturi.</p>
                 </div>
                 <div class="readmelink">
+                    <a href="#">READ MORE</a>
                 </div>
             </div>
             <div class="tabscontent">
@@ -43,6 +44,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione dolorem esse praesentium consequuntur fuga, porro distinctio velit iste? Aperiam, dignissimos dicta! Earum optio recusandae ea hic, distinctio consequatur inventore minus!</p>
                 </div>
                 <div class="readmelink">
+                    <a href="#">READ MORE</a>
                 </div>
             </div>
         </div>
@@ -56,6 +58,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, qui vero voluptatem dignissimos magnam voluptas corporis nostrum suscipit veniam sit ducimus! Repudiandae, dicta distinctio ipsum quas ducimus magni eius ea.</p>
                 </div>
                 <div class="readmelink">
+                    <a href="#">READ MORE</a>
                 </div>
             </div>
             <div class="tabscontent">
@@ -67,6 +70,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis nostrum repellat omnis labore earum reiciendis. Nemo enim tempore animi, quidem eum aperiam perferendis provident mollitia, voluptatem, expedita alias ullam esse!</p>
                 </div>
                 <div class="readmelink">
+                    <a href="#">READ MORE</a>
                 </div>
             </div>
             <div class="tabscontent">
@@ -78,6 +82,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque autem, magni corrupti adipisci repellat eligendi, tempore doloribus aspernatur laudantium quis sit exercitationem sequi perspiciatis. Sequi sed at modi veritatis ipsam.</p>
                 </div>
                 <div class="readmelink">
+                    <a href="#">READ MORE</a>
                 </div>
             </div>
         </div>
